# WindSeer

./: .gitignore  .gitmodules  README.md  clean_database.py  cluster_build_ompl.sh  cluster_setup.sh  convert_dataset.py  database_test.py  dataset_test.py  model_test.py  predict.py  predict_2D.py  setup.py  test_dataset.py  test_model.py  train.py  train_2D.py
benchmark_planner/: CMakeLists.txt  README.md  plot_planning_results.py  sample_start_goal.py
benchmark_planner/src/: HDF5Interface.cpp  HDF5Interface.hpp  HeightMapClass.cpp  HeightMapClass.hpp  MyGoalSampleableRegion.cpp  MyGoalSampleableRegion.hpp  MyNearestNeighbors.hpp  MyOptimizationObjective.cpp  MyOptimizationObjective.hpp  MyProjection.hpp  MyRRTstar.cpp  MyRRTstar.hpp  MySE3StateSpace.cpp  MySE3StateSpace.hpp  MySampler.cpp  MySampler.hpp  MyStateValidityCheckerClass.cpp  MyStateValidityCheckerClass.hpp  WindGrid.cpp  WindGrid.hpp  benchmark_main.cpp  params.hpp
bolund2D/: run_cases
config/: example.yaml
configs/: example.yaml  example_sparse.yaml  example_wind.yaml
models/: GAN_2D.py  __init__.py  ednn_2D.py  ednn_3D.py
openfoam_batch/: get_lims  link_polymesh.sh  make_csvs.sh  make_tar.sh  overview_pseudo  process_stl  processing_pipeline.txt  rebuild_rel_links.sh  reuse_wind_case  run_cases  run_cases_3d  shared_functions.sh  wind_case_pseudo.txt
openfoam_slicer/: process_stl  run_cases  run_cases_3d  sliceDict.in  terrainDict.in
python_stl/: blockMeshDict.in  stl_blockMeshDict.py
test/: check_duplicates.py  plot_dataset_stats.py  test_FullDataset.py  test_dataset.py  test_dataset_conversion.py  test_extract_wind.py  test_loss.py  test_model.py  test_scaling.py  test_sparse_convolution.py
tf_test/: cnn_wind.py  layers.py  plot_wind.py  read_wind_data.py
utils/: GaussianLogLikelihoodLoss.py  MyDataset.py  MyLoss.py  __init__.py  plot_sample.py  plotting.py  prediction_error.py  yaml_tools.py
wind_analysis/: README.md  downscale_tiff.py  evaluate_flight_loiter.py  evaluate_single_flight.py  extract_wind.py  get_mapgeo_terrain.py  (+14 more)
(+341 files in other folders)
